src/include/jme/jme.h

            void jme_ecliptic_to_equatorial( double lon, double lat, double eps, double *ra, double *dec );
            int jme_ecliptic_to_equatorial_rectangular_state( const double *ecliptic, double eps, double *equatorial );
            int jme_elp2000_moon_state(double jd_et, double *results);
            void jme_equatorial_to_ecliptic( double ra, double dec, double eps, double *lon, double *lat );
            int jme_equatorial_to_ecliptic_rectangular_state( const double *equatorial, double eps, double *ecliptic );
            void jme_equatorial_to_horizontal( double hour_angle, double dec, double geo_lat, double *azimuth, double *altitude );
            int jme_fixstar(const char *star, double jd_et, int flags, double *results, char *error);
            int jme_fixstar_mag(const char *star, double *mag, char *error);
            int jme_fixstar_ut(const char *star, double jd_ut, int flags, double *results, char *error);
            int jme_fixstar2(const char *star, double jd_et, int flags, double *results, char *error);
            int jme_fixstar2_mag(const char *star, double *mag, char *error);
            int jme_fixstar2_ut(const char *star, double jd_ut, int flags, double *results, char *error);
            int jme_gauquelin_sector(double jd_ut, int body, const char *starname, int flags, int imeth, double *geopos, double atpress, double attemp, double *dgsect, char *error);
            int jme_get_astro_models(char *models, int flags);
            double jme_get_ayanamsa(double jd_et);
            int jme_get_ayanamsa_ex(double jd_et, int model, double *ayan, char *error);
            int jme_get_ayanamsa_ex_ut(double jd_ut, int model, double *ayan, char *error);
            double jme_get_ayanamsa_ut(double jd_ut);
            int jme_get_nutation(double jd_et, int model, double *dpsi, double *deps, char *error);