lib/src/jme_bindings.dart


  late final _jme_ecliptic_to_equatorialPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('jme_ecliptic_to_equatorial');
  late final _jme_ecliptic_to_equatorial =
      _jme_ecliptic_to_equatorialPtr.asFunction<
          void Function(double, double, double, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>();

  int jme_ecliptic_to_equatorial_rectangular_state(
    ffi.Pointer<ffi.Double> ecliptic,
    double eps,
    ffi.Pointer<ffi.Double> equatorial,
  ) {
    return _jme_ecliptic_to_equatorial_rectangular_state(
      ecliptic,
      eps,
      equatorial,
    );
  }

  late final _jme_ecliptic_to_equatorial_rectangular_statePtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<ffi.Double>, ffi.Double,
                  ffi.Pointer<ffi.Double>)>>(
      'jme_ecliptic_to_equatorial_rectangular_state');
  late final _jme_ecliptic_to_equatorial_rectangular_state =
      _jme_ecliptic_to_equatorial_rectangular_statePtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Double>, double, ffi.Pointer<ffi.Double>)>();

  int jme_elp2000_moon_state(
    double jd_et,
    ffi.Pointer<ffi.Double> results,
  ) {
    return _jme_elp2000_moon_state(
      jd_et,
      results,
    );
  }

  late final _jme_elp2000_moon_statePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double, ffi.Pointer<ffi.Double>)>>('jme_elp2000_moon_state');
  late final _jme_elp2000_moon_state = _jme_elp2000_moon_statePtr
      .asFunction<int Function(double, ffi.Pointer<ffi.Double>)>();

  void jme_equatorial_to_ecliptic(
    double ra,
    double dec,
    double eps,
    ffi.Pointer<ffi.Double> lon,
    ffi.Pointer<ffi.Double> lat,
  ) {
    return _jme_equatorial_to_ecliptic(
      ra,
      dec,
      eps,
      lon,
      lat,
    );
  }

  late final _jme_equatorial_to_eclipticPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('jme_equatorial_to_ecliptic');
  late final _jme_equatorial_to_ecliptic =
      _jme_equatorial_to_eclipticPtr.asFunction<
          void Function(double, double, double, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>();

  int jme_equatorial_to_ecliptic_rectangular_state(
    ffi.Pointer<ffi.Double> equatorial,
    double eps,
    ffi.Pointer<ffi.Double> ecliptic,
  ) {
    return _jme_equatorial_to_ecliptic_rectangular_state(
      equatorial,
      eps,
      ecliptic,
    );
  }

  late final _jme_equatorial_to_ecliptic_rectangular_statePtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<ffi.Double>, ffi.Double,
                  ffi.Pointer<ffi.Double>)>>(
      'jme_equatorial_to_ecliptic_rectangular_state');
  late final _jme_equatorial_to_ecliptic_rectangular_state =
      _jme_equatorial_to_ecliptic_rectangular_statePtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Double>, double, ffi.Pointer<ffi.Double>)>();

  void jme_equatorial_to_horizontal(
    double hour_angle,
    double dec,
    double geo_lat,
    ffi.Pointer<ffi.Double> azimuth,
    ffi.Pointer<ffi.Double> altitude,
  ) {
    return _jme_equatorial_to_horizontal(
      hour_angle,
      dec,
      geo_lat,
      azimuth,
      altitude,
    );
  }

  late final _jme_equatorial_to_horizontalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('jme_equatorial_to_horizontal');
  late final _jme_equatorial_to_horizontal =
      _jme_equatorial_to_horizontalPtr.asFunction<
          void Function(double, double, double, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>();

  int jme_fixstar(
    ffi.Pointer<ffi.Char> star,
    double jd_et,
    int flags,
    ffi.Pointer<ffi.Double> results,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_fixstar(
      star,
      jd_et,
      flags,
      results,
      error,
    );
  }

  late final _jme_fixstarPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Double, ffi.Int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>>('jme_fixstar');
  late final _jme_fixstar = _jme_fixstarPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_fixstar_mag(
    ffi.Pointer<ffi.Char> star,
    ffi.Pointer<ffi.Double> mag,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_fixstar_mag(
      star,
      mag,
      error,
    );
  }

  late final _jme_fixstar_magPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_fixstar_mag');
  late final _jme_fixstar_mag = _jme_fixstar_magPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_fixstar_ut(
    ffi.Pointer<ffi.Char> star,
    double jd_ut,
    int flags,
    ffi.Pointer<ffi.Double> results,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_fixstar_ut(
      star,
      jd_ut,
      flags,
      results,
      error,
    );
  }

  late final _jme_fixstar_utPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_fixstar_ut');
  late final _jme_fixstar_ut = _jme_fixstar_utPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_fixstar2(
    ffi.Pointer<ffi.Char> star,
    double jd_et,
    int flags,
    ffi.Pointer<ffi.Double> results,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_fixstar2(
      star,
      jd_et,
      flags,
      results,
      error,
    );
  }

  late final _jme_fixstar2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Double, ffi.Int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>>('jme_fixstar2');
  late final _jme_fixstar2 = _jme_fixstar2Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_fixstar2_mag(
    ffi.Pointer<ffi.Char> star,
    ffi.Pointer<ffi.Double> mag,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_fixstar2_mag(
      star,
      mag,
      error,
    );
  }

  late final _jme_fixstar2_magPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_fixstar2_mag');
  late final _jme_fixstar2_mag = _jme_fixstar2_magPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_fixstar2_ut(
    ffi.Pointer<ffi.Char> star,
    double jd_ut,
    int flags,
    ffi.Pointer<ffi.Double> results,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_fixstar2_ut(
      star,
      jd_ut,
      flags,
      results,
      error,
    );
  }

  late final _jme_fixstar2_utPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_fixstar2_ut');
  late final _jme_fixstar2_ut = _jme_fixstar2_utPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_gauquelin_sector(
    double jd_ut,
    int body,
    ffi.Pointer<ffi.Char> starname,
    int flags,
    int imeth,
    ffi.Pointer<ffi.Double> geopos,
    double atpress,
    double attemp,
    ffi.Pointer<ffi.Double> dgsect,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_gauquelin_sector(
      jd_ut,
      body,
      starname,
      flags,
      imeth,
      geopos,
      atpress,
      attemp,
      dgsect,
      error,
    );
  }

  late final _jme_gauquelin_sectorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_gauquelin_sector');
  late final _jme_gauquelin_sector = _jme_gauquelin_sectorPtr.asFunction<
      int Function(
          double,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<ffi.Double>,
          double,
          double,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_get_astro_models(
    ffi.Pointer<ffi.Char> models,
    int flags,
  ) {
    return _jme_get_astro_models(
      models,
      flags,
    );
  }

  late final _jme_get_astro_modelsPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>>(
      'jme_get_astro_models');
  late final _jme_get_astro_models = _jme_get_astro_modelsPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  double jme_get_ayanamsa(
    double jd_et,
  ) {
    return _jme_get_ayanamsa(
      jd_et,
    );
  }

  late final _jme_get_ayanamsaPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'jme_get_ayanamsa');
  late final _jme_get_ayanamsa =
      _jme_get_ayanamsaPtr.asFunction<double Function(double)>();

  int jme_get_ayanamsa_ex(
    double jd_et,
    int model,
    ffi.Pointer<ffi.Double> ayan,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_get_ayanamsa_ex(
      jd_et,
      model,
      ayan,
      error,
    );
  }

  late final _jme_get_ayanamsa_exPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_get_ayanamsa_ex');
  late final _jme_get_ayanamsa_ex = _jme_get_ayanamsa_exPtr.asFunction<
      int Function(
          double, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_get_ayanamsa_ex_ut(
    double jd_ut,
    int model,
    ffi.Pointer<ffi.Double> ayan,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_get_ayanamsa_ex_ut(
      jd_ut,
      model,
      ayan,
      error,
    );
  }

  late final _jme_get_ayanamsa_ex_utPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_get_ayanamsa_ex_ut');
  late final _jme_get_ayanamsa_ex_ut = _jme_get_ayanamsa_ex_utPtr.asFunction<
      int Function(
          double, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  double jme_get_ayanamsa_ut(
    double jd_ut,
  ) {
    return _jme_get_ayanamsa_ut(
      jd_ut,
    );
  }

  late final _jme_get_ayanamsa_utPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'jme_get_ayanamsa_ut');
  late final _jme_get_ayanamsa_ut =
      _jme_get_ayanamsa_utPtr.asFunction<double Function(double)>();

  int jme_get_nutation(
    double jd_et,
    int model,
    ffi.Pointer<ffi.Double> dpsi,
    ffi.Pointer<ffi.Double> deps,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_get_nutation(
      jd_et,
      model,
      dpsi,
      deps,
      error,
    );
  }
